--- a/src/Pages/Home/contactStyling.css
+++ b/src/Pages/Home/contactStyling.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 5vw;
+  gap: 2rem;
 }
 
 .contact--form--container {
@@ -12,38 +12,35 @@
   grid-template-columns: 1fr;
   width: 80%;
   max-width: 500px;
-  row-gap: 5vw;
+  row-gap: 2rem;
 }
-
+.contact-title {
+  margin-bottom: 12px;
+}
 .contact-box {
   background-color: #fff;
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
-  gap: 4vw;
-  padding: 5vw;
+  gap: 2rem;
 }
 
 .contact-left {
   border-radius: 15px;
-  padding: 5vw;
+  padding: 2rem;
   background-color: var(--bg-shade);
   width: 100%;
 }
 
 .container1 > h1 {
-  margin-bottom: 2vw;
-}
-
-.container1 p {
-  margin-bottom: 4vw;
+  margin-bottom: 1.5rem;
 }
 
 .input-row {
   display: flex;
   flex-direction: column;
-  gap: 2vw;
-  margin-bottom: 3vw;
+  gap: 1rem;
+  margin-bottom: 2rem;
 }
 
 .contact--input {
@@ -54,15 +51,15 @@
 }
 
 .form-checkbox {
-  margin-top: 2vw;
+  margin-top: 1rem;
 }
 
 .accept-class {
-  margin-bottom: 2vw;
+  margin-bottom: 1rem;
 }
 
 .contact-h3 {
-  margin-bottom: 2vw;
+  margin-bottom: 1rem;
 }
 
 .input-row .input-group {
