--- a/src/Pages/Home/footerStyling.css
+++ b/src/Pages/Home/footerStyling.css
@@ -61,7 +61,7 @@
 }
 
 .footer--social--icon > ul > li > a {
-  font-size: 4vw;
+  font-size: 2rem;
 }
 
 .footer--social--icon > ul > li > a:hover {
