--- a/src/globalStyling.css
+++ b/src/globalStyling.css
@@ -136,7 +136,7 @@ h2 {
 }
 
 .container {
-  padding: 133.3px 85.3px;
+  padding: 100px 65px;
 }
 
 @media (max-width: 900px) {
@@ -166,4 +166,28 @@ h2 {
   line-height: 24px;
   font-weight: 600;
   font-size: 16px;
+}
+
+@media (max-width: 600px) {
+  .section--title {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .sub--title {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 400px) {
+  .section--title {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .sub--title {
+    font-size: 12px;
+    line-height: 20px;
+  }
 }
